Wrap TodoItems in a div to prevent scroll into padding

--- a/todo-django/todo_django/static/todo_django/style.css
+++ b/todo-django/todo_django/static/todo_django/style.css
@@ -26,6 +26,14 @@ main {
   overflow-x: hidden;
 }
 
+#listWrapper {
+  height: 100%;
+  width: 100%;
+
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
 .todoItem {
   background-color: var(--pri-purple-accent);
 }
